# stock-dashboard

./: .env.example  .gitignore  Dockerfile  Makefile  fly.toml  pyproject.toml  render.yaml  requirements.txt  server.py  start.sh
api/: dependencies.py  main.py
api/middleware/: cors.py
api/routers/: indicators.py  news.py  screener.py  stocks.py
app_phase1/: main.py
app_phase1/pages/: 02_🔍_个股分析.py  03_🔎_选股器.py  04_📰_新闻情绪.py
core/: config.py  database.py  models.py  schemas.py
core/cache/: manager.py
core/fetchers/: __init__.py  akshare_fetcher.py  base.py  demo_data.py  router.py  sina_fetcher.py  tencent_fetcher.py  yfinance_fetcher.py
core/indicators/: __init__.py
core/screener/: conditions.py
core/sentiment/: analyzer.py
scripts/: init_db.py
static/: index.html
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/[...path]/: route.ts
web/app/api/health/: route.ts
web/app/api/v1/indicators/[code]/: route.ts
web/app/api/v1/news/: route.ts
web/app/api/v1/screener/presets/: route.ts
web/app/api/v1/screener/run/: route.ts
web/app/api/v1/stocks/[code]/info/: route.ts
web/app/api/v1/stocks/[code]/kline/: route.ts
web/app/api/v1/stocks/[code]/quote/: route.ts
web/app/api/v1/stocks/search/: route.ts
web/app/news/: page.tsx
web/app/screener/: page.tsx
web/app/stock/[code]/: page.tsx
web/components/charts/: KLineChart.tsx
web/components/layout/: Sidebar.tsx
web/lib/: api.ts  demo-data.ts  types.ts
